<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TextView
        android:id="@+id/ttitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_title"
        android:textSize="30sp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="#6DD100"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_nom"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/tAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_age"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/tEspece"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_espece"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etEspece"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <Button
        android:id="@+id/btAddAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enregistrer" />

    <Button
        android:id="@+id/btChercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_chercher" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvresultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />
        </ScrollView>
</LinearLayout>
